--- a/src/app/components/chat-interface/chat-interface.component.html
+++ b/src/app/components/chat-interface/chat-interface.component.html
@@ -5,10 +5,11 @@
       <div *ngSwitchCase="'visualization'">
         <div [id]="'plotly-container-' + msg.id" style="width:100%;height:400px;margin: 1em 0;"></div>
       </div>
-      <!-- Text message: render as usual -->
+      <!-- Text message: render as usual or as HTML -->
       <div *ngSwitchDefault>
         <span class="sender">{{ msg.sender === 'user' ? 'You' : 'Bot' }}:</span>
-        <span class="content">{{ msg.content }}</span>
+        <span class="content" *ngIf="!msg.isHtml">{{ msg.content }}</span>
+        <span class="content" *ngIf="msg.isHtml" [innerHTML]="msg.content"></span>
       </div>
     </ng-container>
   </div>
